--- a/playbook4.yml
+++ b/playbook4.yml
@@ -4,7 +4,7 @@
   hosts: linux_servers
 
   vars_files:
-    - ./sensible.yml
+    - ./variables/sensible2.yml
 
   vars:
     mensaje: "Mensaje de playbook"
