Creacion de fichero ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory/hosts.ini
 remote_user = dummy
 ask_vault_pass = True
 log_path = ./ansible.log
