Creacion de fichero ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory = ./inventory/hosts.ini
 remote_user = dummy
 ask_vault_pass = True
 log_path = ./ansible.log
+vault_password_file = ./secretos.txt
 
 [ssh_connection]
 pipelining = True
