--- a/playbook2.yml
+++ b/playbook2.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "playbook instalación paquete"
-  hosts: all
+  hosts: linux_servers
   become: true
   become_method: "ansible.builtin.sudo"
 
